# combinations-permutations

./: CMakeLists.txt  README.md  calculate_permutations.hpp  calculate_sums.hpp  count_sums.hpp  fib.hpp  main.cpp  print_perm.hpp  print_subarrays.hpp  print_sums.hpp  print_unique.hpp  subarrays.hpp  unique_combinations.hpp  utils.hpp
